<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".presentation.views.CharacterDetailActivity">

    <RelativeLayout
        android:id="@+id/characterAvatarRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/characterImageIv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/characterRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/characterAvatarRv"
        tools:ignore="MissingConstraints"
        android:background="@drawable/shape_item_list_row">

        <TextView
            android:id="@+id/labelNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1d1d26" />

        <TextView
            android:id="@+id/characterNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1d1d26"
            android:paddingLeft="16dp"
            android:layout_toRightOf="@+id/labelNameTv"/>

        <TextView
            android:id="@+id/labelStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_status"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1d1d26"
            android:layout_below="@+id/characterNameTv"/>

        <TextView
            android:id="@+id/characterStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1d1d26"
            android:paddingLeft="16dp"
            android:layout_below="@+id/characterNameTv"
            android:layout_toRightOf="@+id/labelStatusTv"/>

        <TextView
            android:id="@+id/labelSpeciesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_species"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1d1d26"
            android:layout_below="@+id/characterStatusTv"/>

        <TextView
            android:id="@+id/characterSpeciesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1d1d26"
            android:paddingLeft="16dp"
            android:layout_below="@+id/characterStatusTv"
            android:layout_toRightOf="@+id/labelSpeciesTv"/>

        <TextView
            android:id="@+id/labelGenderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1d1d26"
            android:layout_below="@+id/characterSpeciesTv"/>

        <TextView
            android:id="@+id/characterGenderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1d1d26"
            android:paddingLeft="16dp"
            android:layout_below="@+id/characterSpeciesTv"
            android:layout_toRightOf="@+id/labelGenderTv"/>

        <TextView
            android:id="@+id/labelLocationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_location"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1d1d26"
            android:layout_below="@+id/characterGenderTv"/>

        <TextView
            android:id="@+id/characterLocationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1d1d26"
            android:paddingLeft="16dp"
            android:layout_below="@+id/characterGenderTv"
            android:layout_toRightOf="@+id/labelLocationTv"/>

        <TextView
            android:id="@+id/labelOriginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_origin"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1d1d26"
            android:layout_below="@+id/characterLocationTv"/>

        <TextView
            android:id="@+id/characterOriginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1d1d26"
            android:paddingLeft="16dp"
            android:layout_below="@+id/characterLocationTv"
            android:layout_toRightOf="@+id/labelOriginTv"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>